# go1_mpc_control

./: CMakeLists.txt  README.md  package.xml  环境配置.md
config/: gazebo_go1_mpc.yaml  gazebo_go1_qp.yaml  hardware_go1_mpc.yaml
docker/: Dockerfile
include/go1_mpc_control/robot/: gazebo_go1_ros.h  go1_kinematics.h  go1_robot_control.h  hardware_go1_ros.h
include/go1_mpc_control/utils/: convex_mpc.h  filter.hpp  go1_basicEKF.h  go1_ctrl_states.h  go1_params.h  utils.h
launch/: go1_ctrl.launch
src/: main.cpp  main_gazebo.cpp  main_hardware.cpp
src/robot/: gazebo_go1_ros.cpp  go1_kinematics.cpp  go1_robot_control.cpp  hardware_go1_ros.cpp
src/test/: test_bezier.cpp  test_mpc.cpp  test_rotation.cpp  test_unitree_msgs.cpp
src/utils/: convex_mpc.cpp  go1_basicEKF.cpp  utils.cpp
